[gd_scene load_steps=2 format=3 uid="uid://dn70c4asddseq"]

[ext_resource type="Script" path="res://nova_stuff/game_screens/options_screen.gd" id="1_pij7u"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pij7u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.5
offset_top = -70.0
offset_right = 375.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.498039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.588235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 100
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Music Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="SFXLabel" type="Label" parent="VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "SFX Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicSlider2" type="HSlider" parent="VBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="BackButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="ExitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
